# nlp_tutorial

./: .gitignore  pyproject.toml
ch02_text_rep/: 1_tokenize_test.ipynb  2_word2vec_test.ipynb  3_word2vec_apply.py
ch03_traditional_seq_models/: 1_rnn_test.ipynb  2_lstm_test.ipynb
ch03_traditional_seq_models/input_method_rnn/models/: vocab.txt
ch03_traditional_seq_models/input_method_rnn/src/: config.py  dataset.py  evaluate.py  model.py  predict.py  preprocess.py  tokenizer.py  train.py
ch03_traditional_seq_models/input_method_rnn/test/: 1_json_test.ipynb  2_tensorboard_test.ipynb
ch03_traditional_seq_models/review_analysis_gru/models/: vocab.txt
ch03_traditional_seq_models/review_analysis_gru/src/: dataset.py  evaluate.py  model.py  train.py
ch03_traditional_seq_models/review_analysis_lstm/models/: vocab.txt
ch03_traditional_seq_models/review_analysis_lstm/src/: model.py  predict.py
ch03_traditional_seq_models/review_analysis_rnn/src/: config.py  model.py  preprocess.py  tokenizer.py
ch04_seq2seq/translation_seq2seq/src/: model.py  predict.py  train.py
ch04_seq2seq/translation_seq2seq/test/: 1_treebank_tokenizer_test.ipynb  2_pad_seq_test.ipynb  3_linear_test.ipynb
ch05_attention/translation_attention/models/: cn_vocab.txt
ch05_attention/translation_attention/src/: config.py  dataset.py  model.py  predict.py  train.py
ch06_transformer/: 1_self_attention_test.ipynb  2_api_test.ipynb
ch06_transformer/translation_transformer/models/: en_vocab.txt
ch07_pretrained_model/: 1_models_test.ipynb  2_tokenizers_test.ipynb  3_datasets_test.ipynb
(+39 files in other folders)
